# stree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  VERSIONING.md  build.rs  install.sh  install.sh.sha256  install.sh.sha256.sig  public-key.asc
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit.yml  release.yml
docs/: arbor.1  arbor.fish  comparison.md  installation.md  usage.md
src/: config.rs  git.rs  helpers.rs  lib.rs  main.rs  version.rs
src/cli/: args.rs  mod.rs
src/fs_scan/: README.md  mod.rs  walk.rs
src/logger/: mod.rs
src/model/: mod.rs  node.rs
src/renderer/: colors.rs  count.rs  icons.rs  json.rs  mod.rs  stdout.rs
tests/: cli_tests.rs  walk_tests.rs
