[package]
name = "arbor"
version = "1.0.0-alpha"
edition = "2024"
license = "Apache-2.0"
authors = ["Benjamin Grolleau <benjamin.grolleau@outlook.com>", "Angelo Tunney <angelo.tny@hotmail.com>"]
description = "A modern, colorful, and Git-aware reimplementation of the classic tree command."
repository = "https://github.com/Grolleau-Benjamin/arbor"
homepage = "https://github.com/Grolleau-Benjamin/arbor"
readme = "README.md"
keywords = ["cli", "tree", "filesystem", "git", "rust"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"]}
env_logger = "0.11.8"
git2 = "0.20.2"
ignore = "0.4"
log = "0.4.28"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
smol_str = "0.3.4"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
